--- a/02. Layout and Fonts/vidpub/views/chapters.jade
+++ b/02. Layout and Fonts/vidpub/views/chapters.jade
@@ -3,29 +3,30 @@ div(id = "chapter-nav")
   ul
     li
       a(href="#", id="01-history_of_pi" class="chapter-link") A History of Pi
-    li
+    li 
       a(href="#", id="02-the-origins-of-beer" class="chapter-link") The Origins of Beer
-    li
+    li 
       a(href="#", id="03-phi_golden_ratio" class="chapter-link") Phi, The Golden Ratio
-
 
 div(id="chapter")
   h2(id="title")
   p(id="content")
-
- 
+  
 script.
-  var renderMarkdownPage = function(title){
-    var MarkdownPage = require("./lib/markdown_page");
-    var page = new MarkdownPage(title);
-    $("#title").html(page.title);
-    $("#content").html(page.body);
-  }
+  var app = require("./lib/app");
+  var showChapter = function(id){
+    app.emit("chapter-selected", id);
+  };
+  app.on("chapter-rendered", function(chapter){
+    $("#title").html(chapter.title);
+    $("#content").html(chapter.body);
+  });
   $(function(){
-    renderMarkdownPage("01-history_of_pi");
+    showChapter("01-history_of_pi");
     $(".chapter-link").on("click", function(ev){
       ev.preventDefault();
-      var id = this.id;
-      renderMarkdownPage(id);
+      showChapter(this.id);
     });
   });
+
+  
