--- a/02. Layout and Fonts/vidpub/views/home.jade
+++ b/02. Layout and Fonts/vidpub/views/home.jade
@@ -1,2 +1,3 @@
-h1 .jade - The World's Leading Video Stuff 
-p From small minds come big ideas.
+div(class="content")
+  h1 The World's Leading Video Stuff
+  p From small minds come big ideas
